--- a/index.html
+++ b/index.html
@@ -29,23 +29,32 @@
             margin-bottom: 20px;
         }
 
-        /* === LICZNIK === */
-        .counter {
+        /* === PANEL W PRAWYM GÓRNYM ROGU === */
+        .stats {
             position: absolute;
             top: 15px;
             right: 20px;
             background: #263238;
-            padding: 8px 14px;
-            border-radius: 8px;
+            padding: 10px 16px;
+            border-radius: 10px;
             font-weight: bold;
             color: #81c784;
             border: 1px solid #4CAF50;
+            text-align: right;
+            line-height: 1.5;
+        }
+
+        canvas {
+            margin-top: 25px;
+            background: #111;
+            border-radius: 8px;
+            border: 1px solid #333;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
+            margin-top: 25px;
             background-color: #1b1b1b;
         }
 
@@ -80,9 +89,16 @@
 <body>
 
 <div class="container">
-    <div class="counter" id="counter">Wykonane: 0 / 60</div>
+
+    <div class="stats">
+        <div id="counter">Wykonane: 0 / 60</div>
+        <div id="profitSum">Zysk razem: $0.00</div>
+    </div>
 
     <h1>XAUUSD</h1>
+
+    <!-- WYKRES -->
+    <canvas id="progressChart" width="960" height="300"></canvas>
 
     <table>
         <thead>
@@ -158,7 +174,8 @@ function renderTable() {
     });
 
     addCheckboxListeners();
-    updateCounter();
+    updateStats();
+    drawChart();
 }
 
 function addCheckboxListeners() {
@@ -176,15 +193,69 @@ function addCheckboxListeners() {
             }
 
             localStorage.setItem('checkedDays', JSON.stringify(savedChecks));
-            updateCounter();
+            updateStats();
+            drawChart();
         });
     });
 }
 
-function updateCounter() {
+function updateStats() {
     const savedChecks = JSON.parse(localStorage.getItem('checkedDays')) || {};
-    const count = Object.keys(savedChecks).length;
+    const data = generateData();
+
+    let count = 0;
+    let profitSum = 0;
+
+    data.forEach(row => {
+        if (savedChecks[row.day]) {
+            count++;
+            profitSum += row.profit;
+        }
+    });
+
     document.getElementById('counter').textContent = `Wykonane: ${count} / 60`;
+    document.getElementById('profitSum').textContent = `Zysk razem: $${profitSum.toFixed(2)}`;
+}
+
+/* ===== WYKRES POSTĘPU ===== */
+function drawChart() {
+    const canvas = document.getElementById("progressChart");
+    const ctx = canvas.getContext("2d");
+
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    const savedChecks = JSON.parse(localStorage.getItem('checkedDays')) || {};
+    const data = generateData();
+
+    let points = [];
+    let currentSum = 0;
+
+    data.forEach(row => {
+        if (savedChecks[row.day]) {
+            currentSum += row.profit;
+            points.push(currentSum);
+        }
+    });
+
+    if (points.length === 0) return;
+
+    const maxValue = Math.max(...points);
+    const padding = 40;
+    const stepX = (canvas.width - padding * 2) / (points.length - 1 || 1);
+
+    ctx.beginPath();
+    ctx.strokeStyle = "#4CAF50";
+    ctx.lineWidth = 3;
+
+    points.forEach((value, index) => {
+        const x = padding + index * stepX;
+        const y = canvas.height - padding - (value / maxValue) * (canvas.height - padding * 2);
+
+        if (index === 0) ctx.moveTo(x, y);
+        else ctx.lineTo(x, y);
+    });
+
+    ctx.stroke();
 }
 
 renderTable();
